--- a/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti90:2.4": "Quelli che han fede nel Buddha, han fede nel supremo. ",
   "iti90:2.5": "Quando si ha fede nel supremo si ottiene un risultato supremo. ",
   "iti90:3.1": "Di tutte le cose condizionate (creati) o incondizionate (non creati) ci possano essere, la fine della passione, ovvero la disintossicazione, la rimozione dell’arsura, l’eradicazione della dipendenza, la rottura del ciclo dell’esistenza, la distruzione della sete, la fine della passione, la cessazione, il Nibbāna, è considerato la cosa superiore a ogni altro. ",
-  "iti90:3.2": "Quelli che han fede nel Dhamma, han fede nel supremo. ",
+  "iti90:3.2": "Quelli che han fede nel Dhamma che porta alla fine della passione, han fede nel supremo. ",
   "iti90:3.3": "Quando si ha fede nel supremo si ottiene un risultato supremo. ",
   "iti90:4.1": "Non importa quante comunità o congregazioni ci possano essere, la comunità dei discepoli del Buddha, ovvero i quattro tipi di persone, gli otto individui, questa comunità di discepoli del Buddha che è degna di offerte, di ospitalità, di doni, di reverenza, ineguagliabile* campo di merito (ricchezza spirituale) nel mondo, è considerata superiore a ogni altro. ",
   "iti90:4.2": "Quelli che han fede nel Saṅgha, han fede nel supremo. * ",
