--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "mn79:9.6": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.“ ",
   "mn79:9.7": "„Aber was ist diese höchste Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist?“ ",
   "mn79:9.8": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.“ ",
-  "mn79:10.1": "„Udāyī, du könntest noch lange so fortfahren. "
+  "mn79:10.1": "„Udāyī, du könntest noch lange so fortfahren. ",
+  "mn79:10.2": "Du sagst: ‚Die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.‘ Aber du beschreibst diese Herrlichkeit nicht. "
 }
