--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -69,5 +69,6 @@
   "mn79:9.8": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.“ ",
   "mn79:10.1": "„Udāyī, du könntest noch lange so fortfahren. ",
   "mn79:10.2": "Du sagst: ‚Die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.‘ Aber du beschreibst diese Herrlichkeit nicht. ",
-  "mn79:10.3": "Angenommen, ein Mann würde sagen: "
+  "mn79:10.3": "Angenommen, ein Mann würde sagen: ",
+  "mn79:10.4": "‚Ganz gleich, wer die erlesenste Dame im Land ist, sie ist es, die ich will, die ich begehre!‘ "
 }
