--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -78,5 +78,6 @@
   "mn79:10.9": "‚Guter Mann, diese erlesenste Dame im Land, die du begehrst – kennst du ihren Namen oder ihren Stamm? Weißt du, ob sie groß, klein oder mittelgroß ist? Ob ihre Haut schwarz, braun oder lohfarben ist? Aus welchem Dorf, welchem Marktflecken oder welcher Stadt sie stammt?‘ ",
   "mn79:10.10": "Wenn er so gefragt würde, würde er sagen: ‚Nein.‘ ",
   "mn79:10.11": "Man würde zu ihm sagen: ",
-  "mn79:10.12": "‚Guter Mann, begehrst du eine, die du nie auch nur gekannt oder gesehen hast?‘ "
+  "mn79:10.12": "‚Guter Mann, begehrst du eine, die du nie auch nur gekannt oder gesehen hast?‘ ",
+  "mn79:10.13": "Wenn er so gefragt würde, würde er sagen: ‚Ja.‘ "
 }
