--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -81,5 +81,6 @@
   "mn79:10.12": "‚Guter Mann, begehrst du eine, die du nie auch nur gekannt oder gesehen hast?‘ ",
   "mn79:10.13": "Wenn er so gefragt würde, würde er sagen: ‚Ja.‘ ",
   "mn79:10.14": "Was denkst du, Udāyī? ",
-  "mn79:10.15": "Wenn das so ist, stellt sich da nicht heraus, dass die Aussage dieses Mannes keine beweisbare Grundlage hat?“ "
+  "mn79:10.15": "Wenn das so ist, stellt sich da nicht heraus, dass die Aussage dieses Mannes keine beweisbare Grundlage hat?“ ",
+  "mn79:10.16": "„Sicherlich ist das so, Herr.“ "
 }
