--- a/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
@@ -93,7 +93,7 @@
   "sn36.19:12.5": "dies sei das höchste Glück und Hochgefühl, das Lebewesen erfahren. ",
   "sn36.19:12.6": "Aber ich erkenne das nicht an. ",
   "sn36.19:12.7": "Warum ist das so? ",
-  "sn36.19:12.8": "Weil es ein anderes Glück gibt, das erlesener ist als jenes. ",
+  "sn36.19:12.8": "Weil es ein anderes Glück gibt, das besser und erlesener ist als jenes. ",
   "sn36.19:13.1": "Und was ist dieses Glück? ",
   "sn36.19:13.2": "Da übersteigt ein Mönch vollständig die Dimension des unendlichen Bewusstseins, tritt im Wissen: ‚Da ist überhaupt nichts‘ in die Dimension des Nichts ein und verweilt darin. ",
   "sn36.19:13.3": "Das ist ein Glück, das erlesener ist als jenes. ",
