--- a/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
@@ -109,7 +109,7 @@
   "sn36.19:14.5": "dies sei das höchste Glück und Hochgefühl, das Lebewesen erfahren. ",
   "sn36.19:14.6": "Aber ich erkenne das nicht an. ",
   "sn36.19:14.7": "Warum ist das so? ",
-  "sn36.19:14.8": "Weil es ein anderes Glück gibt, das erlesener ist als jenes. ",
+  "sn36.19:14.8": "Weil es ein anderes Glück gibt, das besser und erlesener ist als jenes. ",
   "sn36.19:15.1": "Und was ist dieses Glück? ",
   "sn36.19:15.2": "Da übersteigt ein Mönch vollständig die Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat, tritt in das Aufhören von Wahrnehmung und Gefühl ein und verweilt darin. ",
   "sn36.19:15.3": "Das ist ein Glück, das erlesener ist als jenes. ",
