--- a/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
@@ -50,7 +50,7 @@
   "mn59:7.3": "Weil es ein anderes Glück gibt, das besser und erlesener ist als jenes. ",
   "mn59:7.4": "Und was ist dieses Glück? ",
   "mn59:7.5": "Da tritt ein Mönch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; da gibt es aus Abgeschiedenheit geborene Ekstase und Seligkeit, während er den Geist ausrichtet und hält. ",
-  "mn59:7.6": "Das ist ein Glück, das erlesener ist als jenes. ",
+  "mn59:7.6": "Das ist ein Glück, das besser und erlesener ist als jenes. ",
   "mn59:8.1": "Es gibt die, die sagen würden, dies sei das höchste Glück und Hochgefühl, das Lebewesen erfahren. Aber ich gestehe ihnen das nicht zu. ",
   "mn59:8.2": "Warum ist das so? ",
   "mn59:8.3": "Weil es ein anderes Glück gibt, das erlesener ist als jenes. ",
