--- a/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
@@ -53,7 +53,7 @@
   "mn59:7.6": "Das ist ein Glück, das besser und erlesener ist als jenes. ",
   "mn59:8.1": "Es gibt die, die sagen würden, dies sei das höchste Glück und Hochgefühl, das Lebewesen erfahren. Aber ich gestehe ihnen das nicht zu. ",
   "mn59:8.2": "Warum ist das so? ",
-  "mn59:8.3": "Weil es ein anderes Glück gibt, das erlesener ist als jenes. ",
+  "mn59:8.3": "Weil es ein anderes Glück gibt, das besser und erlesener ist als jenes. ",
   "mn59:8.4": "Und was ist dieses Glück? ",
   "mn59:8.5": "Da tritt ein Mönch, wenn das Ausrichten und Halten des Geistes sich beruhigt, in die zweite Vertiefung ein und verweilt darin; da gibt es aus Versenkung geborene Ekstase und Seligkeit, mit innerer Klarheit und geeintem Geist, ohne Ausrichten und Halten. … ",
   "mn59:9.2": "Es gibt ein anderes Glück, das erlesener ist als jenes. ",
