--- a/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
@@ -59,7 +59,7 @@
   "mn59:9.2": "Es gibt ein anderes Glück, das besser und erlesener ist als jenes. ",
   "mn59:9.3": "Und was ist dieses Glück? ",
   "mn59:9.4": "Da tritt ein Mönch mit dem Schwinden der Ekstase in die dritte Vertiefung ein und verweilt darin; da meditiert er mit Gleichmut, achtsam und bewusst, und erfährt persönlich die Seligkeit, von der die Edlen erklären: ‚Gleichmütig und achtsam meditiert man in Seligkeit.‘ … ",
-  "mn59:10.2": "Es gibt ein anderes Glück, das erlesener ist als jenes. ",
+  "mn59:10.2": "Es gibt ein anderes Glück, das besser und erlesener ist als jenes. ",
   "mn59:10.3": "Und was ist dieses Glück? ",
   "mn59:10.4": "Da gibt ein Mönch Glück und Schmerz auf und tritt mit dem Enden früherer Fröhlichkeit und Traurigkeit in die vierte Vertiefung ein und verweilt darin, ohne Glück oder Schmerz, mit reinem Gleichmut und reiner Achtsamkeit. … ",
   "mn59:11.2": "Es gibt ein anderes Glück, das erlesener ist als jenes. ",
