--- a/translation/de/sabbamitta/sutta/an/an10/an10.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.99_translation-de-sabbamitta.json
@@ -38,7 +38,7 @@
   "an10.99:6.1": "„Nach einiger Zeit wächst dieser Junge heran und seine Fähigkeiten reifen heran. ",
   "an10.99:6.2": "Er spielt dann Kinderspiele wie Spielzeugpflüge, Stockschlagen, Purzelbäume, Windrädchen, Spielzeug-Messbecher, Spielzeug-Kutschen und Spielzeug-Bogen. ",
   "an10.99:6.3": "Was denkst du, Upāli? ",
-  "an10.99:6.4": "Sind solche Spiele nicht besser als das, was er vorher getan hat?“ ",
+  "an10.99:6.4": "Sind solche Spiele nicht besser und erlesener als das, was er vorher getan hat?“ ",
   "an10.99:6.5": "„Ja, Herr.“ ",
   "an10.99:7.1": "„Nach einiger Zeit wächst dieser Junge heran und seine Fähigkeiten reifen weiter heran. ",
   "an10.99:7.2": "Entsprechend vergnügt er sich mit den fünf Arten sinnlicher Erregung, mit denen er versorgt und ausgestattet ist: ",
