--- a/translation/de/sabbamitta/sutta/dn/dn11_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn11_translation-de-sabbamitta.json
@@ -92,7 +92,7 @@
   "dn11:77.1": "der Gott mit Namen Sunimmita … ",
   "dn11:77.2": "die Götter, die über das herrschen, was andere ersinnen … ",
   "dn11:78.1": "der Gott mit Namen Vasavattī … ",
-  "dn11:79.6": "die Götter aus Brahmās Gefolge stehen über uns. ",
+  "dn11:79.6": "die Götter aus Brahmās Gefolge sind besser und erlesener als wir. ",
   "dn11:79.7": "Sie könnten es wissen.‘ ",
   "dn11:80.1": "Dann erlangte jener Mönch einen Versenkungszustand solcher Art, dass ein Pfad zu Brahmā erschien. ",
   "dn11:80.2": "Da begab er sich zu den Göttern aus Brahmās Gefolge und sagte: ",
