--- a/translation/de/sabbamitta/sutta/dn/dn11_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn11_translation-de-sabbamitta.json
@@ -99,7 +99,7 @@
   "dn11:80.3": "‚Geehrte, wo hören diese vier Grundzustände restlos auf, nämlich die Elemente Erde, Wasser, Feuer und Wind?‘ ",
   "dn11:80.4": "Aber auch sie sagten zu ihm: ",
   "dn11:80.5": "‚Mönch, das wissen wir auch nicht. ",
-  "dn11:80.7": "Aber dort ist Brahmā, der Große Brahmā, der Bezwinger, der Unbezwungene, der allumfassende Seher, der, der die Macht hat, Gott der Allmächtige, der Macher, der Schöpfer, der Erste, der Erzeuger, der Lenker, der Vater derer, die geboren sind und noch geboren werden. Er steht über uns. ",
+  "dn11:80.7": "Aber dort ist Brahmā, der Große Brahmā, der Bezwinger, der Unbezwungene, der allumfassende Seher, der, der die Macht hat, Gott der Allmächtige, der Macher, der Schöpfer, der Erste, der Erzeuger, der Lenker, der Vater derer, die geboren sind und noch geboren werden. Er ist besser und erlesener als wir. ",
   "dn11:80.8": "Er könnte es wissen.‘ ",
   "dn11:80.10": "‚Aber Geehrte, wo ist dieser Brahmā jetzt?‘ ",
   "dn11:80.11": "‚Wir wissen auch nicht, wo er ist oder in welcher Richtung er sich befindet. ",
