--- a/translation/de/sabbamitta/sutta/an/an4/an4.100_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.100_translation-de-sabbamitta.json
@@ -32,7 +32,7 @@
   "an4.100:5.1": " ",
   "an4.100:5.2": " ",
   "an4.100:5.3": "„Herr Gotama, es ist der Mensch, der die, die Tadel verdienen, zur rechten Zeit der Wahrheit gemäß und richtig tadelt und die, die Lob verdienen, zur rechten Zeit der Wahrheit gemäß und richtig lobt. ",
-  "an4.100:5.4": "Das ist der Mensch, den ich für den erlesensten halte. ",
+  "an4.100:5.4": "Das ist der Mensch, den ich für besser und erlesener halte. ",
   "an4.100:5.5": "Warum ist das so? ",
   "an4.100:5.6": "Weil, Herr Gotama, das Verstehen von Zeit und Umständen das Beste ist. ",
   "an4.100:6.1": "Vortrefflich, Herr Gotama! Vortrefflich! ",
