--- a/translation/de/sabbamitta/sutta/an/an4/an4.100_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.100_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "an4.100:2.5": "Ein anderer Mensch lobt die, die Lob verdienen, nicht … Und die, die Tadel verdienen, tadelt er nicht … ",
   "an4.100:2.6": "Ein anderer Mensch tadelt die, die Tadel verdienen, zur rechten Zeit, der Wahrheit gemäß und richtig. Und die, die Lob verdienen, lobt er zur rechten Zeit, der Wahrheit gemäß und richtig. ",
   "an4.100:2.7": "Das sind die vier Menschen, die man in der Welt findet. ",
-  "an4.100:2.8": "Welcher von den vieren, denkst du, ist besser und erlesener?“ ",
+  "an4.100:2.8": "Welcher von den vieren, denkst du, ist vortrefflicher und erlesener?“ ",
   "an4.100:3.1": " ",
   "an4.100:3.2": " ",
   "an4.100:3.3": " ",
