--- a/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
@@ -56,7 +56,7 @@
   "sn36.19:7.8": "Weil es ein anderes Glück gibt, das vortrefflicher und erlesener ist als jenes. ",
   "sn36.19:8.1": "Und was ist dieses Glück? ",
   "sn36.19:8.2": "Da tritt ein Mönch, wenn das Ausrichten und Halten des Geistes sich beruhigt, in die zweite Vertiefung ein und verweilt darin; da gibt es aus Versenkung geborene Ekstase und Seligkeit, mit innerer Klarheit und geeintem Geist, ohne Ausrichten und Halten. ",
-  "sn36.19:8.3": "Das ist ein Glück, das besser und erlesener ist als jenes. ",
+  "sn36.19:8.3": "Das ist ein Glück, das vortrefflicher und erlesener ist als jenes. ",
   "sn36.19:8.4": "Es gibt die, die sagen würden, ",
   "sn36.19:8.5": "dies sei das höchste Glück und Hochgefühl, das Lebewesen erfahren. ",
   "sn36.19:8.6": "Aber ich erkenne das nicht an. ",
