--- a/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
@@ -85,7 +85,7 @@
   "sn36.19:11.5": "dies sei das höchste Glück und Hochgefühl, das Lebewesen erfahren. ",
   "sn36.19:11.6": "Aber ich erkenne das nicht an. ",
   "sn36.19:11.7": "Warum ist das so? ",
-  "sn36.19:11.8": "Weil es ein anderes Glück gibt, das besser und erlesener ist als jenes. ",
+  "sn36.19:11.8": "Weil es ein anderes Glück gibt, das vortrefflicher und erlesener ist als jenes. ",
   "sn36.19:12.1": "Und was ist dieses Glück? ",
   "sn36.19:12.2": "Da übersteigt ein Mönch vollständig die Dimension des unendlichen Raumes, tritt im Wissen: ‚Bewusstsein ist unendlich‘ in die Dimension des unendlichen Bewusstseins ein und verweilt darin. ",
   "sn36.19:12.3": "Das ist ein Glück, das besser und erlesener ist als jenes. ",
