--- a/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
@@ -104,7 +104,7 @@
   "sn36.19:13.8": "Weil es ein anderes Glück gibt, das vortrefflicher und erlesener ist als jenes. ",
   "sn36.19:14.1": "Und was ist dieses Glück? ",
   "sn36.19:14.2": "Da übersteigt ein Mönch vollständig die Dimension des Nichts, tritt in die Dimension ein, die weder Wahrnehmung noch keine Wahrnehmung hat, und verweilt darin. ",
-  "sn36.19:14.3": "Das ist ein Glück, das besser und erlesener ist als jenes. ",
+  "sn36.19:14.3": "Das ist ein Glück, das vortrefflicher und erlesener ist als jenes. ",
   "sn36.19:14.4": "Es gibt die, die sagen würden, ",
   "sn36.19:14.5": "dies sei das höchste Glück und Hochgefühl, das Lebewesen erfahren. ",
   "sn36.19:14.6": "Aber ich erkenne das nicht an. ",
