--- a/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
@@ -56,7 +56,7 @@
   "mn59:8.3": "Weil es ein anderes Glück gibt, das vortrefflicher und erlesener ist als jenes. ",
   "mn59:8.4": "Und was ist dieses Glück? ",
   "mn59:8.5": "Da tritt ein Mönch, wenn das Ausrichten und Halten des Geistes sich beruhigt, in die zweite Vertiefung ein und verweilt darin; da gibt es aus Versenkung geborene Ekstase und Seligkeit, mit innerer Klarheit und geeintem Geist, ohne Ausrichten und Halten. … ",
-  "mn59:9.2": "Es gibt ein anderes Glück, das besser und erlesener ist als jenes. ",
+  "mn59:9.2": "Es gibt ein anderes Glück, das vortrefflicher und erlesener ist als jenes. ",
   "mn59:9.3": "Und was ist dieses Glück? ",
   "mn59:9.4": "Da tritt ein Mönch mit dem Schwinden der Ekstase in die dritte Vertiefung ein und verweilt darin; da meditiert er mit Gleichmut, achtsam und bewusst, und erfährt persönlich die Seligkeit, von der die Edlen erklären: ‚Gleichmütig und achtsam meditiert man in Seligkeit.‘ … ",
   "mn59:10.2": "Es gibt ein anderes Glück, das besser und erlesener ist als jenes. ",
