--- a/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
@@ -65,7 +65,7 @@
   "mn59:11.2": "Es gibt ein anderes Glück, das vortrefflicher und erlesener ist als jenes. ",
   "mn59:11.3": "Und was ist dieses Glück? ",
   "mn59:11.4": "Da übersteigt ein Mönch jegliche Formwahrnehmung, und mit dem Beenden der Wahrnehmung von Eindrücken, und indem er den Geist nicht auf die Wahrnehmung von Vielfalt richtet, tritt er im Wissen: ‚Raum ist unendlich‘ in die Dimension des unendlichen Raumes ein und verweilt darin. … ",
-  "mn59:12.2": "Es gibt ein anderes Glück, das besser und erlesener ist als jenes. ",
+  "mn59:12.2": "Es gibt ein anderes Glück, das vortrefflicher und erlesener ist als jenes. ",
   "mn59:12.3": "Und was ist dieses Glück? ",
   "mn59:12.4": "Da übersteigt ein Mönch vollständig die Dimension des unendlichen Raumes, tritt im Wissen: ‚Bewusstsein ist unendlich‘ in die Dimension des unendlichen Bewusstseins ein und verweilt darin. … ",
   "mn59:13.2": "Es gibt ein anderes Glück, das besser und erlesener ist als jenes. ",
