--- a/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
@@ -71,7 +71,7 @@
   "mn59:13.2": "Es gibt ein anderes Glück, das vortrefflicher und erlesener ist als jenes. ",
   "mn59:13.3": "Und was ist dieses Glück? ",
   "mn59:13.4": "Da übersteigt ein Mönch vollständig die Dimension des unendlichen Bewusstseins, tritt im Wissen: ‚Da ist überhaupt nichts‘ in die Dimension des Nichts ein und verweilt darin. … ",
-  "mn59:14.2": "Es gibt ein anderes Glück, das besser und erlesener ist als jenes. ",
+  "mn59:14.2": "Es gibt ein anderes Glück, das vortrefflicher und erlesener ist als jenes. ",
   "mn59:14.3": "Und was ist dieses Glück? ",
   "mn59:14.4": "Da übersteigt ein Mönch vollständig die Dimension des Nichts, tritt in die Dimension ein, die weder Wahrnehmung noch keine Wahrnehmung hat, und verweilt darin. ",
   "mn59:14.5": "Das ist ein Glück, das besser und erlesener ist als jenes. ",
