--- a/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn59_translation-de-sabbamitta.json
@@ -77,7 +77,7 @@
   "mn59:14.5": "Das ist ein Glück, das vortrefflicher und erlesener ist als jenes. ",
   "mn59:15.1": "Es gibt die, die sagen würden, dies sei das höchste Glück und Hochgefühl, das Lebewesen erfahren. Aber ich gestehe ihnen das nicht zu. ",
   "mn59:15.2": "Warum ist das so? ",
-  "mn59:15.3": "Weil es ein anderes Glück gibt, das besser und erlesener ist als jenes. ",
+  "mn59:15.3": "Weil es ein anderes Glück gibt, das vortrefflicher und erlesener ist als jenes. ",
   "mn59:15.4": "Und was ist dieses Glück? ",
   "mn59:15.5": "Da übersteigt ein Mönch vollständig die Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat, tritt in das Aufhören von Wahrnehmung und Gefühl ein und verweilt darin. ",
   "mn59:15.6": "Das ist ein Glück, das besser und erlesener ist als jenes. ",
