--- a/translation/de/sabbamitta/sutta/an/an10/an10.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.99_translation-de-sabbamitta.json
@@ -48,7 +48,7 @@
   "an10.99:7.6": "Geschmäcke, die die Zunge erkennt … ",
   "an10.99:7.7": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "an10.99:7.8": "Was denkst du, Upāli? ",
-  "an10.99:7.9": "Sind solche Spiele nicht besser und erlesener als das, was er vorher getan hat?“ ",
+  "an10.99:7.9": "Sind solche Spiele nicht vortrefflicher und erlesener als das, was er vorher getan hat?“ ",
   "an10.99:7.10": "„Ja, Herr.“ ",
   "an10.99:8.1": "„Doch dann erscheint ein Klargewordener in der Welt, ein Vollendeter, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet. ",
   "an10.99:8.2": "Er hat diese Welt – mit ihren Göttern, Māras und Brahmās, mit dieser Bevölkerung mit ihren Asketen und Brahmanen, Göttern und Menschen – durch eigene Einsicht erkannt und erklärt sie anderen. ",
