--- a/translation/de/sabbamitta/sutta/an/an3/an3.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.60_translation-de-sabbamitta.json
@@ -73,7 +73,7 @@
   "an3.60:13.3": "‚Denke so, nicht so. Richte den Geist auf dieses, nicht auf jenes. Gib dieses auf, erlange jenes und lebe mit dieser Errungenschaft.‘ ",
   "an3.60:13.4": "Das nennt man eine Lehrdemonstration. ",
   "an3.60:13.5": "Das sind die drei Demonstrationen. ",
-  "an3.60:13.6": "Welche dieser drei Demonstrationen betrachtest du als die erlesenste?“ ",
+  "an3.60:13.6": "Welche dieser drei Demonstrationen betrachtest du als vortrefflicher und erlesener?“ ",
   "an3.60:14.1": "„Wenn ich das betrachte, Herr Gotama, ",
   "an3.60:14.2": " ",
   "an3.60:14.3": "so wird eine Demonstration übersinnlicher Kraft nur von dem erlebt, der sie vorführt, sie geschieht nur für ihn. ",
