--- a/translation/de/sabbamitta/sutta/an/an10/an10.75_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.75_translation-de-sabbamitta.json
@@ -33,7 +33,7 @@
   "an10.75:12.1": "In diesem Fall ist der Mensch, der unsittlich ist, ",
   "an10.75:12.2": "aber die die Freiheit des Herzens und die Freiheit durch Weisheit, mit der dieses unsittliche Verhalten restlos aufhört, wahrhaftig versteht ",
   "an10.75:12.3": "und der Dinge gehört und gelernt und gedanklich erfasst und zumindest zeitweilige Freiheit gefunden hat, ",
-  "an10.75:12.4": "besser und erlesener als der andere. ",
+  "an10.75:12.4": "vortrefflicher und erlesener als der andere. ",
   "an10.75:12.5": "Warum ist das so? ",
   "an10.75:12.6": "Weil der Strom der Lehre ihn fortträgt. ",
   "an10.75:12.7": "Aber wer kennt den Unterschied außer einem Klargewordenen? ",
