--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -62,7 +62,7 @@
   "mn79:8.10": "Vielleicht kann ich den Buddha zufriedenstellen, indem ich eine Frage über meine eigene Tradition beantworte.“ ",
   "mn79:9.1": "„Aber Udāyī, was ist deine eigene Tradition?“ ",
   "mn79:9.2": "„Herr, sie ist dies: ",
-  "mn79:9.3": "‚Das ist die höchste Herrlichkeit, das ist die höchste Herrlichkeit.‘“ ",
+  "mn79:9.3": "‚Das ist der höchste Glanz, das ist der höchste Glanz.‘“ ",
   "mn79:9.4": "„Aber was ist diese höchste Herrlichkeit?“ ",
   "mn79:9.6": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.“ ",
   "mn79:9.7": "„Aber was ist diese höchste Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist?“ ",
