--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -63,7 +63,7 @@
   "mn79:9.1": "„Aber Udāyī, was ist deine eigene Tradition?“ ",
   "mn79:9.2": "„Herr, sie ist dies: ",
   "mn79:9.3": "‚Das ist der höchste Glanz, das ist der höchste Glanz.‘“ ",
-  "mn79:9.4": "„Aber was ist diese höchste Herrlichkeit?“ ",
+  "mn79:9.4": "„Aber was ist dieser höchste Glanz?“ ",
   "mn79:9.6": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.“ ",
   "mn79:9.7": "„Aber was ist diese höchste Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist?“ ",
   "mn79:9.8": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.“ ",
