--- a/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
@@ -15,7 +15,7 @@
   "iti90:5.3": "ha fede nel supremo Buddha, ",
   "iti90:5.4": "degno di doni, insuperabile*, ",
   "iti90:6.1": "ha fede nel supremo Dhamma, ",
-  "iti90:6.2": "nella fine della passione, nella calma, nella felicità, // nella felicità pacifica dell’impassibilità /// nella felicità della tranquilla dissipazione della passione ",
+  "iti90:6.2": "nella fine della passione, nella calma, nella felicità, // nella felicità pacifica dell’impassibilità /// nella felicità attraverso tranquilla dissipazione della passione ",
   "iti90:6.3": "ha fede nel supremo Saṅgha, ",
   "iti90:6.4": "nell’insuperabile campo di merito (ricchezza spirituale*) ",
   "iti90:7.1": "e fa offerte al supremo, ",
