--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -2,5 +2,6 @@
   "iti76:0.1": "Taip bylota 76 ",
   "iti76:0.2": "Trejetukų knyga ",
   "iti76:0.3": "3. Trečiasis skyrius ",
-  "iti76:0.4": "Laimės siekis "
+  "iti76:0.4": "Laimės siekis ",
+  "iti76:1.1": "Aš girdėjau, kad taip tikrai bylojo Palaimintasis, taip bylojo _Arahantas_: "
 }
