--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -6,5 +6,6 @@
   "iti76:1.1": "Aš girdėjau, kad taip tikrai bylojo Palaimintasis, taip bylojo _Arahantas_: ",
   "iti76:2.1": "„Išminčius, vienuoliai, saugo dorovę siekdamas trijų rūšių laimės. ",
   "iti76:2.2": "Kokių trijų? ",
-  "iti76:2.3": "Galvodamas: „Tebūnu gyriamas,” – išminčius saugo dorovę. Galvodamas: „Tepraturtėju,” – išminčius saugo dorovę. Galvodamas: „Po kūno žūties, po mirties teatgimstu geroje vietoje, danguje,” – išminčius saugo dorovę. "
+  "iti76:2.3": "Galvodamas: „Tebūnu gyriamas,” – išminčius saugo dorovę. Galvodamas: „Tepraturtėju,” – išminčius saugo dorovę. Galvodamas: „Po kūno žūties, po mirties teatgimstu geroje vietoje, danguje,” – išminčius saugo dorovę. ",
+  "iti76:2.4": "„Išminčius, vienuoliai, saugo dorovę siekdamas šių trijų rūšių laimės. "
 }
